# ComfyUI-prompt-templating

./: LICENSE  PromtTemplate.py  README.md  __init__.py  pyproject.toml
web/js/: extension.js
