[project]
name = "prompt-templating"
description = "Easily replace variables like *obj or *style in your prompts using templates."
version = "1.0.0"
license = {file = "LICENSE"} 


[project.urls]
Repository = "https://github.com/DaniilVdovin/ComfyUI-prompt-templating"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/DaniilVdovin/ComfyUI-prompt-templating/wiki"
"Bug Tracker" = "https://github.com/DaniilVdovin/ComfyUI-prompt-templating/issues"

[tool.comfy]
PublisherId = "daniil-vdovin"
DisplayName = "ComfyUI-prompt-templating"
Icon = "https://private-user-images.githubusercontent.com/45402557/500374579-3ce4e6bc-b868-454b-a2bd-3c805ad63bd9.png?jwt=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpc3MiOiJnaXRodWIuY29tIiwiYXVkIjoicmF3LmdpdGh1YnVzZXJjb250ZW50LmNvbSIsImtleSI6ImtleTUiLCJleHAiOjE3NjAzMzcxODUsIm5iZiI6MTc2MDMzNjg4NSwicGF0aCI6Ii80NTQwMjU1Ny81MDAzNzQ1NzktM2NlNGU2YmMtYjg2OC00NTRiLWEyYmQtM2M4MDVhZDYzYmQ5LnBuZz9YLUFtei1BbGdvcml0aG09QVdTNC1ITUFDLVNIQTI1NiZYLUFtei1DcmVkZW50aWFsPUFLSUFWQ09EWUxTQTUzUFFLNFpBJTJGMjAyNTEwMTMlMkZ1cy1lYXN0LTElMkZzMyUyRmF3czRfcmVxdWVzdCZYLUFtei1EYXRlPTIwMjUxMDEzVDA2MjgwNVomWC1BbXotRXhwaXJlcz0zMDAmWC1BbXotU2lnbmF0dXJlPWE1MDIwNjQyNTEwYTFlMDU5MjA3MmY1YzQxYWIzODA3NDZkM2E4YWJmYzYxYmJjYmUwNGQ1NmMzNmFlM2MxZjQmWC1BbXotU2lnbmVkSGVhZGVycz1ob3N0In0.cniH_W44lSm04QrwTOr3qv1Z-Vkl5KO65LxqPDlWPgE"
includes = []

