[project]
name = "prompt-templating"
description = "Easily replace variables like *obj or *style in your prompts using templates."
version = "1.1.0"
license = {file = "LICENSE"} 


[project.urls]
Repository = "https://github.com/DaniilVdovin/ComfyUI-prompt-templating"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/DaniilVdovin/ComfyUI-prompt-templating/wiki"
"Bug Tracker" = "https://github.com/DaniilVdovin/ComfyUI-prompt-templating/issues"

[tool.comfy]
PublisherId = "daniil-vdovin"
DisplayName = "ComfyUI-prompt-templating"
Icon = "https://github.com/user-attachments/assets/3ce4e6bc-b868-454b-a2bd-3c805ad63bd9"
includes = []

